--- a/index.html
+++ b/index.html
@@ -31,8 +31,21 @@
 
     <h2>Links</h2>
 
-    <a href="/"primary link></a>
-    <a href="/"secondary link></a>
+    <a href="/">primary linkk</a>
+    <a href="/">seoandary link</a>
+
+    <hr>
+    @lists
+     Here's my list
+    <div>1. Item one</div>
+    <div>2. Item two</div>
+    <div>3. Item three</div>
+
+
+    <hr>
+
+    <h2>@nav</h2>
+    
 
 
 
