section and footer done

--- a/index.html
+++ b/index.html
@@ -70,6 +70,30 @@
 
     </header>
 
+    <hr>
+    <h3>@section</h3>
+    <section>
+        <h3>white section </h3>
+        <p>this will have gray background</p>
+    </section>
+
+    <section>
+        <h3>white section </h3>
+        <p>this will have white  background</p>
+    </section>
+
+    <hr>
+    <h2>@footer</h2>
+        <footer>  <div>some small heading inside footer</div>
+            <ul>
+                <li>social one</li>
+                <li>social two</li>
+                <li>social three</li>
+            </ul>
+    </footer>
+      
+
+
 
 
 
