--- a/index.html
+++ b/index.html
@@ -32,17 +32,22 @@
 
     <hr>
 
-    <h2>Links</h2>
+    <h2>@links</h2>
 
-    <a href="/">primary linkk</a>
-    <a href="/">seoandary link</a>
+    <a class="link primary link"
+     href="/">Primary Link</a>
+    <a class="link link Secondary"
+    href="/">Secondary Link</a>
 
     <hr>
-    @lists
+
+   <h2>@lists</h2>
      Here's my list
+       
     <div>1. Item one</div>
     <div>2. Item two</div>
     <div>3. Item three</div>
+    
 
 
     <hr>
